bug(custom-treatments-braces.sass): not showing image on mobile

--- a/src/components/custom/custom-treatments-braces/custom-treatments-braces.sass
+++ b/src/components/custom/custom-treatments-braces/custom-treatments-braces.sass
@@ -6,7 +6,13 @@
     color: $darkBlue
 
   &__row
-    @extend .flex-row
+    @media screen and (min-width: 770px)
+      // @extend .flex-row
+      display: flex
+      
+    flex-direction: row
+
+
 
     @include tablet
       flex-direction: column
